--- a/src/modules/themes/list-item.component.astro
+++ b/src/modules/themes/list-item.component.astro
@@ -1,5 +1,6 @@
 ---
 import type { CollectionEntry } from "astro:content";
+import { URL_PREFIX } from "../../shared/config";
 interface Props {
     theme: CollectionEntry<"themes">;
 }
@@ -16,7 +17,7 @@ const tagClassNames = theme.data.tags?.map(x => `tag--${x}`).join(' ');
     </div>
     <div class="mt-4">
         <h3 class="text-sm text-gray-700 dark:text-gray-300">
-            <a href={`/themes/${theme.slug}`}>
+            <a href={`${URL_PREFIX}themes/${theme.slug}`}>
                 <span aria-hidden="true" class="absolute inset-0"></span>
                 {theme.data.id}
             </a>
