--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '../shared/layout/base-layout.astro';
 import { Image } from 'astro:assets';
-import pic from '../modules/home/pic.jpg';
+import homePicture from '../modules/home/pic.jpg';
+import { URL_PREFIX } from "../shared/config";
 ---
 <Layout description='Meta desc here'>
     <div class="mx-auto max-w-7xl max-sm:-mx-4 max-sm:-my-6">
@@ -20,11 +21,11 @@ import pic from '../modules/home/pic.jpg';
                 <p class="mt-6 text-lg leading-8 text-gray-300">Community-driven information site around third-party replacement car screens running Kesaiwei software. Read about changes found in latest firmware updates, browse through available themes and more.</p>
                 <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start">
                     <a href="https://discord.gg/Ex8e6qE2eR" class="flex items-center rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Join our Discord server</a>
-                    <a href="/updates" class="text-sm font-semibold leading-6 text-white">See what's new <span aria-hidden="true">→</span></a>
+                    <a href={`${URL_PREFIX}updates`} class="text-sm font-semibold leading-6 text-white">See what's new <span aria-hidden="true">→</span></a>
                 </div>
             </div>
             <div class="relative mt-16 h-80 lg:mt-8">
-                <Image class="absolute left-0 top-0 w-[57rem] max-w-none rounded-md bg-white/5 ring-1 ring-white/10" src={pic} alt="" />
+                <Image class="absolute left-0 top-0 w-[57rem] max-w-none rounded-md bg-white/5 ring-1 ring-white/10" src={homePicture} alt="" />
             </div>
         </div>
     </div>
