--- a/src/pages/themes/[...slug].astro
+++ b/src/pages/themes/[...slug].astro
@@ -3,7 +3,7 @@ import { getCollection } from 'astro:content';
 import { Image } from 'astro:assets';
 import { Code } from 'astro:components';
 import Layout from "../../shared/layout/base-layout.astro";
-import { SHIKI_THEMES } from "../../shared/config";
+import { SHIKI_THEMES, URL_PREFIX } from "../../shared/config";
 
 export async function getStaticPaths() {
     const entries = await getCollection('themes');
@@ -39,5 +39,5 @@ const { Content } = await entry.render();
         <Content />
     </div>
     
-    <a href="/themes">Back to all themes</a>
+    <a href={`${URL_PREFIX}themes`}>Back to all themes</a>
 </Layout>
