--- a/src/pages/updates/[...slug].astro
+++ b/src/pages/updates/[...slug].astro
@@ -3,6 +3,7 @@ import Layout from "../../shared/layout/base-layout.astro";
 import DateTime from '../../shared/date-time.component.astro'
 import FileSignatures from "../../modules/updates/file-signatures.component.astro";
 import { getUpdatesByPlatform } from "../../modules/updates/updates";
+import { URL_PREFIX } from "../../shared/config";
 
 export async function getStaticPaths() {
     const platforms = await getUpdatesByPlatform();
@@ -28,7 +29,7 @@ const { Content } = await entry.render();
     {(entry.previous || entry.next) && (
         <div class="flex justify-between mb-4">
             {entry.previous && (
-                <a href={`/updates/${entry.previous.slug}`} class="self-start bg-slate-800 text-white py-2 pl-2 pr-4 rounded inline-flex items-center">
+                <a href={`${URL_PREFIX}updates/${entry.previous.slug}`} class="self-start bg-slate-800 text-white py-2 pl-2 pr-4 rounded inline-flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
                     </svg>
@@ -37,7 +38,7 @@ const { Content } = await entry.render();
             )}
 
             {entry.next && (
-                <a href={`/updates/${entry.next.slug}`} class="self-end ml-auto bg-slate-800 text-white py-2 pr-2 pl-4 rounded inline-flex items-center">
+                <a href={`${URL_PREFIX}updates/${entry.next.slug}`} class="self-end ml-auto bg-slate-800 text-white py-2 pr-2 pl-4 rounded inline-flex items-center">
                     {entry.next.data.version}
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
@@ -59,5 +60,5 @@ const { Content } = await entry.render();
         {entry.data.signatures && <FileSignatures signatures={entry.data.signatures} />}
 
     </article>
-    <a href="/updates">Back to all updates</a>
+    <a href={`${URL_PREFIX}updates`}>Back to all updates</a>
 </Layout>
