Add more labels for factory settings and show XML file references

--- a/src/pages/factory-settings.astro
+++ b/src/pages/factory-settings.astro
@@ -17,6 +17,6 @@ const collection = await getCollection('factory-settings');
 
     <hr>
     
-    <h3>An example <code>factory_config.xml</code> file:</h3>
+    <h2 class="prose mt-5">An example <code>factory_config.xml</code> file for BMW:</h2><br>
     <Code lang="xml" code={xml} theme experimentalThemes={SHIKI_THEMES} />
 </Layout>
