--- a/src/modules/factory-settings/setting.component.astro
+++ b/src/modules/factory-settings/setting.component.astro
@@ -13,6 +13,17 @@ const { section, setting, parent } = Astro.props;
 const uniqueId = slug([section, parent, setting.name].filter(x => x).join(' '));
 const parentId = parent ? slug([section, parent].filter(x => x).join(' ')) : undefined;
 
+let configXmlRef = undefined;
+
+if (typeof setting.configValue !== "undefined") {
+    configXmlRef = `Value for the setting above in factory_config.xml should be "${setting.configValue}"`;
+} else if (setting.configKey) {
+    configXmlRef = `This setting can be found and set in factory_config.xml file with key "${setting.configKey}"`;
+
+    if (setting.control === 'checkbox' && !setting.children) {
+        configXmlRef += `\n\nAdditionally, the values will be most likely "0" or "1" to indicate disabled/enabled state.`;
+    }
+}
 ---
 <div>
     <div class="flex items-center space-x-2">
@@ -54,6 +65,16 @@ const parentId = parent ? slug([section, parent].filter(x => x).join(' ')) : und
             >
             <span>({setting.min} - {setting.max})</span>
         )}
+
+        {configXmlRef && (
+            <span class="flex items-center text-xs mt-0.5text-gray-600 dark:text-gray-400" title={configXmlRef}>
+                &lpar;
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3 mt-0.5 mr-1 inline">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                </svg>
+                <code class="not-prose mt-0.5">{setting.configKey || setting.configValue}</code> &rpar;
+            </span>
+        )}
     </div>
 
     {setting.description && (
@@ -69,4 +90,3 @@ const parentId = parent ? slug([section, parent].filter(x => x).join(' ')) : und
         <Astro.self section={section} setting={child} parent={setting.name}></Astro.self>
     ))}
 </div>
-
