--- a/src/shared/layout/navigation.component.astro
+++ b/src/shared/layout/navigation.component.astro
@@ -11,13 +11,15 @@ import Folder from 'astro-heroicons/outline/Folder.astro';
 import Swatch from 'astro-heroicons/outline/Swatch.astro';
 import Cog6Tooth from 'astro-heroicons/outline/Cog6Tooth.astro';
 import QuestionMarkCircle from 'astro-heroicons/outline/QuestionMarkCircle.astro';
+import ChatBubbleLeftRight from 'astro-heroicons/outline/ChatBubbleLeftRight.astro';
 import ColorSchemeSwitch from './color-scheme.component.astro';
 
 const menu = [
     {
         name: 'General',
         children: [
-            { name: 'Home', path: '', icon: Home }
+            { name: 'Home', path: '', icon: Home },
+            { name: 'Discord', path: 'https://discord.gg/Ex8e6qE2eR', icon: ChatBubbleLeftRight }
         ]
     },
     {
@@ -40,7 +42,7 @@ const menu = [
     }
 ];
 
-const getLink = (path: string) => `${URL_PREFIX}${path}`;
+const getLink = (path: string) => path.startsWith('http') ? path : `${URL_PREFIX}${path}`;
 const prefix = 'flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6';
 const suffixes = {
     current: 'bg-gray-800 text-white',
