--- a/src/shared/layout/navigation.component.astro
+++ b/src/shared/layout/navigation.component.astro
@@ -110,7 +110,7 @@ const getAriaCurrent = (href: string) => {
     </div>
 </div>
 
-<div class="sticky top-0 flex items-center gap-x-6 px-4 py-4 shadow-sm bg-gray-900 sm:px-6 lg:pl-72 lg:hidden">
+<div class="sticky top-0 flex items-center gap-x-6 px-4 py-4 shadow-sm bg-gray-900 sm:px-6 lg:pl-72 lg:hidden z-10">
     <button type="button" class="p-2.5 -m-2.5 text-gray-400 lg:hidden" x-on:click="sidebar = !sidebar">
         <span class="sr-only">Open sidebar</span>
         <Bars3 class="w-6 h-6"></Bars3>
