--- a/src/pages/updates/[...slug].astro
+++ b/src/pages/updates/[...slug].astro
@@ -29,7 +29,7 @@ const { Content } = await entry.render();
 ---
 <Layout title={`${entry.data.id}`}>
     {(previous || next) && (
-        <div class="flex justify-between mb-4">
+        <div class="flex max-sm:justify-between mb-4">
             {previous && (
                 <a href={`${URL_PREFIX}updates/${previous.slug}`} class="self-start bg-slate-800 text-white py-2 pl-2 pr-4 rounded inline-flex items-center">
                     <ChevronLeft class="w-6 h-6" />
@@ -38,7 +38,7 @@ const { Content } = await entry.render();
             )}
 
             {next && (
-                <a href={`${URL_PREFIX}updates/${next.slug}`} class="self-end ml-auto bg-slate-800 text-white py-2 pr-2 pl-4 rounded inline-flex items-center">
+                <a href={`${URL_PREFIX}updates/${next.slug}`} class="self-end bg-slate-800 text-white ml-4 py-2 pr-2 pl-4 rounded inline-flex items-center">
                     {getUpdateVersion(next)}
                     <ChevronRight class="w-6 h-6" />
                 </a>
