Add Umami Analytics for some basic stats, since GitHub Pages doesn't have anything built-in after all

--- a/src/shared/layout/base-layout.astro
+++ b/src/shared/layout/base-layout.astro
@@ -29,6 +29,7 @@ const description = pageDescription || DEFAULT_PAGE_DESCRIPTION;
     <meta name="theme-color" content="#111827" />
     <link rel="robots" href="/robots.txt" />
     <!--<link rel="sitemap" type="application/xml" href="/sitemap.xml" />-->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="e0f4a738-aa45-4891-b409-772c495cb8b2"></script>
   </head>
   <body x-data="{ sidebar: false }" class="bg-white dark:bg-gray-900">
     <Navigation title={title} />
