--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,5 +9,5 @@ import homePicture from '../shared/pic.jpg';
         <p>Read about changes found in latest firmware updates, browse through available themes and more. Start by selecting your vendor from the menu.</p>
         <p>Join the conversation on <a href="https://discord.gg/Ex8e6qE2eR">Android Automotive Headunits Discord</a> or various forums like <a href="https://f30.bimmerpost.com/forums/showthread.php?t=1832178">Bimmerpost and its Android 11/12/13 thread</a>.</p>
     </div>
-    <Image class="mt-12 rounded-md" src={homePicture} alt="" />
+    <Image class="mt-12 rounded-md" src={homePicture} alt="" layout="full-width" loading="eager" />
 </Layout>
