--- a/src/pages/themes/_list-item.component.astro
+++ b/src/pages/themes/_list-item.component.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import type { CollectionEntry } from "astro:content";
 import { URL_PREFIX } from "../../shared/config";
 interface Props {
@@ -11,16 +12,18 @@ const tagClassNames = theme.data.tags?.map(x => `tag--${x}`).join(' ');
 <div class={`group relative ${tagClassNames}`}>
     <div class="overflow-hidden rounded-md w-full group-hover:opacity-75">
         {theme.data.images?.[0] ? (
-            <img
-                src={theme.data.images?.[0]?.src}
+            <Image
+                src={theme.data.images[0]}
                 alt={theme.data.display}
-                class="h-full w-full object-cover object-center lg:h-full lg:w-full"
+                layout="responsive"
             />
         ) : (
-            <img
+            <Image
                 src={`https://placehold.co/1920x720?text=${theme.data.id}`}
                 alt={theme.data.display}
-                class="h-full w-full object-cover object-center lg:h-full lg:w-full"
+                layout="responsive"
+                width={1920}
+                height={720}
             />
         )}
     </div>
