--- a/src/pages/factory-settings/_setting.component.astro
+++ b/src/pages/factory-settings/_setting.component.astro
@@ -34,7 +34,7 @@ if (typeof setting.configValue !== "undefined") {
                 id={uniqueId}
                 name={uniqueId}
                 disabled="disabled"
-                class="rounded w-4 h-4 border-gray-300 text-indigo-600 focus:ring-indigo-500"
+                class="rounded-sm w-4 h-4 border-gray-300 text-indigo-600 focus:ring-indigo-500"
             >
         )}
 
